[package]
name = "streaming"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "streaming"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.11.1"
anchor-spl = "0.11.1"
solana-frozen-abi = "1.7.9"
